<resources>
    <string name="app_name">Explore NI</string>
    <string name="nav_explore">Explore</string>
    <string name="nav_home">Home</string>
    <string name="nav_ar">AR</string>
    <string name="nav_plan">Plan</string>
    <string name="nav_favourites">Favourites</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tb_emergency">Emergency Info</string>
    <string name="tb_settings">Settings</string>
    <string name="tb_favourite">Favourite</string>
    <string name="tb_map">View on map</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="tb_sort">Sort</string>
    <string name="tb_filter">Filter</string>
    <string name="add_location">Add location</string>
    <string name="view_on_map">View on map</string>
    <string name="title_activity_interest">InterestActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="interests">
        <item>Castles</item>
        <item>History</item>
        <item>Landmarks</item>
        <item>Mythology</item>
    </string-array>
</resources>
